--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2926,9 +2926,9 @@ IRQ_radical_socialist_DEF:0 "The Iraqi Socialist Republic"
 IRQ_social_democrat:0 "Iraqi Republic"
 IRQ_social_democrat_ADJ:0 "Iraqi"
 IRQ_social_democrat_DEF:0 "The Iraqi Republic"
-IRQ_social_liberal:0 "Iraqi Revolt"
+IRQ_social_liberal:0 "Iraqi Republic"
 IRQ_social_liberal_ADJ:0 "Iraqi"
-IRQ_social_liberal_DEF:0 "The Iraqi Revolt"
+IRQ_social_liberal_DEF:0 "The Iraqi Republic"
 IRQ_market_liberal:0 "Iraq"
 IRQ_market_liberal_ADJ:0 "Iraqi"
 IRQ_market_liberal_DEF:0 "Iraq"
@@ -6057,9 +6057,9 @@ SYR_radical_socialist_DEF:0 "The Syrian Socialist Republic"
 SYR_social_democrat:0 "Syrian Republic"
 SYR_social_democrat_ADJ:0 "Syrian"
 SYR_social_democrat_DEF:0 "The Syrian Republic"
-SYR_social_liberal:0 "Syrian Revolt"
+SYR_social_liberal:0 "Syrian Republic"
 SYR_social_liberal_ADJ:0 "Syrian"
-SYR_social_liberal_DEF:0 "The Syrian Revolt"
+SYR_social_liberal_DEF:0 "The Syrian Republic"
 SYR_market_liberal:0 "Syria"
 SYR_market_liberal_ADJ:0 "Syrian"
 SYR_market_liberal_DEF:0 "Syria"
@@ -6537,9 +6537,9 @@ TUR_authoritarian_democrat_DEF:0 "Turkey"
 TUR_paternal_autocrat:0 "Turkey"
 TUR_paternal_autocrat_ADJ:0 "Turkish"
 TUR_paternal_autocrat_DEF:0 "Turkey"
-TUR_national_populist:0 "Turkey"
+TUR_national_populist:0 "Turkish State"
 TUR_national_populist_ADJ:0 "Turkish"
-TUR_national_populist_DEF:0 "Turkey"
+TUR_national_populist_DEF:0 "The Turkish State"
 
 UGA_totalist:0 "Uganda"
 UGA_totalist_ADJ:0 "Ugandan"
