--- a/localisation/KR_Ottoman_l_english.yml
+++ b/localisation/KR_Ottoman_l_english.yml
@@ -1045,3 +1045,7 @@ ott.176.a:0 "We will get to the bottom of this..."
 ott.177.t:0 "Hashemite spies caught in Damascus"
 ott.177.d:0 "Our gendarmerie, working together with local law enforcement, has managed to arrest several Hashemite spies in Damascus. Detailed maps of the region and intelligence notes on Ottoman military strength were found in the possession of these agents. Their mission seems to be the formation of clandestine cells across Syria, which would be activated in case of war between Arabian states and the Ottoman Empire."
 ott.177.a:0 "Such scheming will not go unpunished..."
+
+ott.178.t:0 "Victory Day!"
+ott.178.d:0 "Our magnificent Sultan has declared today a day of celebration, in recognition of our glorious victory over the rebellious Arab states."
+ott.178.a:0 "May our army be ever-triumphant!"
