--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -409,48 +409,48 @@ poland.3.a:0 "Send the army in and arrest everyone involved in this putsch!"
 poland.4.t:0 "General unrest in the countryside!"
 poland.4.d:0 "Since our national exports have fallen, our economy is so weak that it cannot support production. Prices are plummeting and thousands of peasants are demanding the government do something about the economic crisis. Peasant hatred has passed onto the gentry and the authorities, policemen have reported they are having a hard time in keeping peace in the countryside."
 poland.4.a:0 "Can this get any worse?"
-poland.5.t:0 "Ukrainian terror!"
+poland.5.t:0 "Ukrainian Terror!"
 poland.5.d:0 "With the incorporation of Galicia the number of Ukrainians in our country has increased greatly. The larger cities of Eastern Galicia are populated by a majority of Poles, but the countryside the opposite is true and there are a majority of Ukrainians. Disenfranchised Ukrainians who are very unhappy about being part of Poland and have set up an organisation called the 'Ukrainian Insurgent Army' that is starting to attack our military and government officials."
 poland.5.a:0 "This is really bad!"
-poland.6.t:0 "Solutions for our immense problems"
+poland.6.t:0 "Solutions for our Immense Problems"
 poland.6.d:0 "Now we face two crises, a weak economy and a crisis of authority caused by the former. The police and the army are having serious problems keeping the country together. We need to seriously rethink our policies."
 poland.6.a:0 "Liberalise, introduce more democracy in Poland"
 poland.6.b:0 "The Government Collapses!"
-poland.6.c:0 "Invite the Military to Form a New Government"
+poland.6.c:0 "Invite the Military to Form a New Government."
 poland.7.t:0 "Chaos in the Countryside"
 poland.7.d:0 "After the collapse of the government in Poland, various factions have risen up and are vying for control of the country. Both the Syndicalist party and the Nationalist circles are strong enough to take over the Polish cities and countryside. With the remaining authorities sceptical of their own ability to retain what power they have left, most have given up and...."
 poland.7.a:0 "The Syndicalists take over!"
 poland.7.b:0 "The Nationalists take over!"
 poland.8.t:0 "A New Constitution"
 poland.8.d:0 "After the new King, [POL.GetLeader], promised sweeping reforms, we now have to think about what the reforms should actually entail."
-poland.8.a:0 "Focus on Economic Growth"
+poland.8.a:0 "Focus on Economic Growth."
 poland.8.b:0 "The Regency Council must elect a king! Now!"
-poland.8.c:0 "Focus on Empowering the Military"
-poland.8.e:0 "Focus on Expanding Royal Power"
-poland.8.f:0 "Focus on National Unity"
+poland.8.c:0 "Focus on Empowering the Military."
+poland.8.e:0 "Focus on Expanding Royal Power."
+poland.8.f:0 "Focus on National Unity."
 poland.9.t:0 "Another attempt at a King of Poland"
 poland.9.d:0 "Just after the Weltkrieg, the Regency Council made an attempt to elect a king of Poland. This attempt, however, was stalled by the Polish inability to firmly support a single candidate and by the Central Powers' apparent lack of interest. Now, with the 20th anniversary of Kingdom of Poland's proclamation approaching, the Regency Council wants to make one last attempt."
-poland.9.a:0 "Let us try again"
-poland.10.t:0 "The Polish election"
+poland.9.a:0 "Let us try again."
+poland.10.t:0 "The Polish Election"
 poland.10.d:0 "The Polish Regency Council has announced that it will again attempt to elect a King. Many in Lithuania see this as the perfect chance to recreate the Polish-Lithuanian Commonwealth. If we were able to do that, it would unite us once more with our Polish brothers and the Commonwealth would be a power to be reckoned with. Should we declare our desire to recreate the Commonwealth or just let the Poles try and elect a King?"
 poland.10.a:0 "Announce our desire to recreate the Commonwealth"
-poland.10.b:0 "Wish them luck"
+poland.10.b:0 "Wish them luck."
 poland.11.t:0 "Lithuanians and the Commonwealth"
 poland.11.d:0 "The Lithuanians have declared a renewed interest in recreating the Commonwealth. While in the past the Commonwealth was a major power in Europe it eventually was destroyed by Russia, Austria and Prussia. Because of this, some people have said we should forget the Commonwealth and instead start the election for a King. What should our response be to the Lithuanians?"
-poland.11.a:0 "Agree to the proposal"
-poland.11.b:0 "Ban Mindaugas from the election"
-poland.11.c:0 "Proceed with the election"
+poland.11.a:0 "Agree to the proposal."
+poland.11.b:0 "Ban Mindaugas from the election."
+poland.11.c:0 "Proceed with the election."
 poland.12.t:0 "The Polish have shunned us!"
 poland.12.d:0 "After we expressed our wish to once more stand with Poland by remaking the Commonwealth, the Regency Council banned Mindaugas III from the election and spurned the idea of remaking the Commonwealth!"
 poland.12.a:0 "Curse them!"
 poland.13.t:0 "The Polish Election"
 poland.13.d:0 "The Lithuanians under Mindaugas III had proposed a reborn Polish-Lithuanian Commonwealth to the Polish Regency Council. Thankfully, the Council not only rejected the proposal, but banned Mindaugas from the election. Many officials are calling for us to pressure the council to elect Friedrich Christian Wettin as the new King of Poland to ensure the Poles do nothing to upset our interests. What should we do?"
 poland.13.a:0 "Pressure the Poles to elect Friedrich Christian Wettin"
-poland.13.b:0 "Wish them luck"
+poland.13.b:0 "Wish them luck."
 poland.14.t:0 "The Council has ignored us"
 poland.14.d:0 "After declaring our desire to recreate the Commonwealth, the Polish Regency Council has simply ignored us! While we do not have the diplomatic power to do much more then complain, Germany certainly does have the ability to do so. Should we ask the Germans to help us create a new Commonwealth?"
-poland.14.a:0 "Ask for Germany's help"
-poland.14.b:0 "Let the Poles have their election"
+poland.14.a:0 "Ask for Germany's help."
+poland.14.b:0 "Let the Poles have their election."
 poland.15.t:0 "Lithuania has asked for help"
 poland.15.d:0 "The Lithuanians are asking we help them recreate the Commonwealth. Supporting them would create both a strong ally and keep Poland out of the Hapsburg's hands. However, some worry it would weaken our own position in the region and instead we should support Friedrich Christian Wettin to become the new King of Poland. What should we do?"
 poland.15.a:0 "Pressure the Poles to elect Mindaugas III"
@@ -487,22 +487,22 @@ poland.20.e:0 "We need a Polish King, viva la Augustyn I Czartoryski!"
 poland.21.t:0 "Another attempt for a King of Poland"
 poland.21.d:0 "Just after the Weltkrieg, the Regency Council made an attempt to elect a king of Poland. This attempt, however, was stalled by the Polish inability to firmly support a single candidate and by the Central Powers' apparent lack of interest. Now, with the 20th anniversary of Kingdom of Poland's proclamation approaching, the Regency Council wants to make one last attempt."
 poland.21.a:0 "Let us try again"
-poland.22.t:0 "The Polish election"
+poland.22.t:0 "The Polish Election"
 poland.22.d:0 "The Polish are attempting another election for a King and Mindaugas III is an official candidate. We would clearly lose Poland if he was elected so many officials are calling for the removal of Mindaugas III. As Lithuania is an ally of Germany, such a move would upset them as well, so it has also been proposed that we pressure for the election of Karl Olbracht Hapsburg. What should we do?"
 poland.22.a:0 "Demand Mindaugas III is removed"
 poland.22.b:0 "Pressure the Poles to elect Karl Olbracht Habsburg"
 poland.22.c:0 "Wish them luck"
-poland.23.t:0 "The Polish election"
+poland.23.t:0 "The Polish Election"
 poland.23.d:0 "The Polish are attempting another election for a King and Mindaugas III is an official candidate. We would clearly lose Poland if he was elected so many officials are calling for the removal of Mindaugas III. As Lithuania is an ally of Germany, such a move would upset them as well, so it has also been proposed that we pressure for the election of Karl Olbracht Hapsburg. What should we do?"
 poland.23.a:0 "Demand Mindaugas III is removed"
 poland.23.b:0 "Pressure the Poles to elect Karl Olbracht Habsburg"
 poland.23.c:0 "Wish them luck"
-poland.24.t:0 "The Polish election"
+poland.24.t:0 "The Polish Election"
 poland.24.d:0 "The Polish are attempting another election for a King and Mindaugas III is an official candidate. We would clearly lose Poland if he was elected so many officials are calling for the removal of Mindaugas III. As Lithuania is an ally of Germany, such a move would upset them as well, so it has also been proposed that we pressure for the election of Karl Olbracht Hapsburg. What should we do?"
 poland.24.a:0 "Demand Mindaugas III is removed"
 poland.24.b:0 "Pressure the Poles to elect Karl Olbracht Habsburg"
 poland.24.c:0 "Wish them luck"
-poland.25.t:0 "The Austrian demand"
+poland.25.t:0 "The Austrian Demand"
 poland.25.d:0 "The Austrians have sent a demand to us bluntly stating to remove Mindaugas III of Lithuania from the list of potential Kings. The obvious choice is to agree to the demand, but we could elect Mindaugas III on the spot to free ourselves of the Austrians, or finally, we could ignore their demands and proceed with the election. What should we do?"
 poland.25.a:0 "Comply and remove Mindaugas III"
 poland.25.b:0 "Ignore their demand"
