--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -28,17 +28,17 @@ PLC_polish_enthusiasm_idea_desc:0 ""
 PLC_secret_police_idea:0 "The Ministry of Public Security"
 PLC_secret_police_idea_desc:0 ""
 PLC_scattered_bureaucracy_idea:0 "Overwhelmed Bureaucracy"
-PLC_scattered_bureaucracy_idea_desc:0 ""
+PLC_scattered_bureaucracy_idea_desc:0 "The bureaucracy of two distinct nations have siddenyl been given the overwhelming task of combining tow vastly different governmental systems into one cohesive whole. The new government is buckling under the pressure, and unitl integration is complete, the Commonwealth will be bureaucratically crippled."
 PLC_scattered_bureaucracy_idea1:0 "Overwhelmed Bureaucracy"
-PLC_scattered_bureaucracy_idea1_desc:0 ""
+PLC_scattered_bureaucracy_idea1_desc:0 "The bureaucracy of two distinct nations have siddenyl been given the overwhelming task of combining tow vastly different governmental systems into one cohesive whole. The new government is buckling under the pressure, and unitl integration is complete, the Commonwealth will be bureaucratically crippled."
 PLC_universal_suffrage_idea:0 "Universal Suffrage"
 PLC_universal_suffrage_idea_desc:0 ""
 PLC_diplomatic_offices_idea:0 "International Diplomatic Offices"
 PLC_diplomatic_offices_idea_desc:0 ""
 PLC_cultural_tensions_idea:0 "Cultural Tensions"
-PLC_cultural_tensions_idea_desc:0 ""
+PLC_cultural_tensions_idea_desc:0 "Both Polish and Lithuanian citizens fear that their political voices will be unheard in favor of the other side. Both peoples are feeling mistrustful of each other, and a general feeling of unease pervades national politics."
 PLC_cultural_tensions_idea1:0 "Cultural Tensions"
-PLC_cultural_tensions_idea1_desc:0 ""
+PLC_cultural_tensions_idea1_desc:0 "Both Polish and Lithuanian citizens fear that their political voices will be unheard in favor of the other side. The people are beginning to realize their mistrust is unfounded, but a general feeling of unease still pervades national politics."
 PLC_mobilise_the_people:0 "Mobilise the People"
 PLC_mobilise_the_people_desc:0 ""
 PLC_minority_guarantees_idea:0 "Minority Guarantees"
@@ -267,7 +267,7 @@ plcommon.8.t:0 "Dmowski is dead!"
 plcommon.8.d:0 "Dmowski, who has been a thorn in our side by setting up opposition against the Commonwealth, was killed in one of clashes between the army and his men. His death has sparked a fire of Polish nationalism, this is not going to end well."
 plcommon.8.a:0 "Damn it..."
 plcommon.9.t:0 "March of the National-Radicals"
-plcommon.9.d:0 "After Dmowski's death, Adam Doboszynski took leadership of the National-Radical Party and organised a march to the capital of the Commonwealth, demanding both punishment for the murderers of Dmowski and a government lead by himself and his supporters. The situation is very dire, there are thousands of supporters of the National-Radical Party in the capital. What should we do?"
+plcommon.9.d:0 "After Dmowski's death, Adam Doboszynski took leadership of the National-Radical Party and organised a march to the capital of the Commonwealth, demanding both punishment for the murderers of Dmowski and a government led by himself and his supporters. The situation is very dire, there are thousands of supporters of the National-Radical Party in the capital. What should we do?"
 plcommon.9.a:0 "We cannot oppose them, Doboszynski is the new prime minister"
 plcommon.9.b:0 "Crush them!"
 plcommon.10.t:0 "Doboszynski's coup!"
@@ -411,17 +411,17 @@ plcommon.42.t:0 "Poland Rebels!"
 plcommon.42.d:0 "After our increasingly anti-Polish policies led to the effective dissolution of the Commonwealth, the Poles have been fuming under the Lithuanian bootheel. Today, the Polish government, rallying around nationalist Roman Dmowski, have declared that they will no longer be a part of antion dominated by Lithuanian oppressors, and have declared their total independence!"
 plcommon.42.a:0 "They will die for this!"
 plcommon.43.t:0 "Voldemaras' Army"
-plcommon.43.d:0 "to-do"
+plcommon.43.d:0 "Today in the Lithuanian city of Siauliai, the LTIP held a large rally in the name of Lithuanian primacy. The party's leader, Augustinas Voldemaras, preached to cheering crounds that "their worst nightmares had come true", and that "Polish rats were spreading themselves through the government like a plague". He pointed to recent governmental policies that clearly favoured Polish interests over Lithuanian ones, and found his speech received with thunderous applause. After the end of the rally, rumors have spread of the LTIP forming small militias in the name of "Protecting the Lithuanian people"."
 plcommon.43.a:0 "Disband them immediately!"
-plcommon.44.t:0 "The LPIT"
-plcommon.44.d:0 "to-do"
+plcommon.44.t:0 "The LTIP"
+plcommon.44.d:0 "A recent wave of local elections in Lithuania have revealed startling results. Voldemaras' LTIP paarty won a large amount of governmental offices, sweeping many rural areas and gaining a startlingly large presence in local Lithuanian politics. While the party performed poorly in areas around the capital and in Poland, the very fact that Voldemaras' speeches are reaching so many people is extremely concerning. \n\n Rumors swirl of the LTIP planning to make a move on the national government, and newspapers across the nation are even predicting a permanent rift forming between the two halves of the kingdom."
 plcommon.44.a:0 "This is very troubling."
-plcommon.45.t:0 "The LPIT Demands Control"
-plcommon.45.d:0 "to-do"
+plcommon.45.t:0 "The LTIP Demands Control"
+plcommon.45.d:0 "The citizens of the Commonwealth's capital awoke otday to a surprising sight, thousands of Lithuanian nationals marching down the streets of the capital and demanding that their voices be heard in the government. Voldemaras' LTIP party had organised a march to the capital of the Commonwealth right under the nose of the regime, demanding both that the government be freed from "Polish meddling" and a new government be created, led by himself and his supporters. The situation is very dire, there are thousands of supporters of the LTIP Party in the capital. What should we do?"
 plcommon.45.a:0 "We must give in."
 plcommon.45.b:0 "Never!"
 plcommon.46.t:0 "Voldemaras' Coup"
-plcommon.46.d:0 "to-do"
+plcommon.46.d:0 "After our refusal to their demands, the Lithuanian Nationalists have made an attempt to take power into their hands. Only our armed forces can save us now...."
 plcommon.46.a:0 "The coup succeeds."
 plcommon.46.b:0 "Hold them back!"
 plcommon.47.t:0 "Lithuanian Nationalists Seize the Commonwealth!"
@@ -475,7 +475,7 @@ plcommon.60.t:0 "An Unacceptable Trade"
 plcommon.60.d:0 "The Kaiser has flatly denied our request for territory, stating that they only deal with "proper nations" and that we should learn our place in the European hierarchy. It seems like we shall not be seeing Poznan under our care for some time."
 plcommon.60.a:0 "To be expected..."
 plcommon.61.t:0 "A Referendum in Ruthenia"
-plcommon.61.d:0 "The territories that were rightfully Polish but ceded by the Treaty of Brest-Livotsk now lie under the control of the German puppet Ruthenia. We should seek a diplomatic solution to this problem, and we believe that a proper referendum on the territories joining the Commonwealth is a proper way to handle this situation. We should make the proposal to the Ruthenians as soon as possible."
+plcommon.61.d:0 "The territories that were rightfully Polish but ceded by the Treaty of Brest-Livotsk now lie under the control of the German puppet Ruthenia. We should seek a diplomatic solution to this problem, and we believe that a proper referendum on the territories joining the Commonwealth is a proper way to handle this situation. There are enough ethnic Poles and Lithuanians living in the region that a vote may turn in our favour. We should make the proposal to the Ruthenians as soon as possible."
 plcommon.61.a:0 "I hope they agree."
 plcommon.62.t:0 "A Referendum?"
 plcommon.62.d:0 "The new Polish-Lithuanian Commonwealth has made a diplomatic request for a referendum to be held on the status of our border territories with their nation. If we agree, the territories will hold a vote to either stay with Ruthenia, or join the Commonwealth. How should we respond?"
@@ -501,6 +501,9 @@ plcommon.67.a:0 "Let's Celebrate!"
 plcommon.68.t:0 "The Referendum Fails!"
 plcommon.68.d:0 "After the votes have been tallied, our side has lost the referendum vote. It was a good attempt, at least."
 plcommon.68.a:0 "Unfortunate."
+plcommon.69.t:0 "The Commonwealth Comes Together"
+plcommon.69.d:0 "With the decree of Mendog III that the kingdoms of both Poland and Lithuania shall be united as one nation, the peoples of both states have found themselves with an uncertain future. The two nations have not been together in union for over a century, and the Commonwealth's new government is in its infancy. \n\nLithuanians are already voicing concerns that the more plentiful Polish will seize effective control of the nation, and many Poles feel that a Lithuanian king will treat them as second-class citizens in favor of his own people. Tensions have been increasing across the nation, and both Populist and Syndicalist movements feed off of the distrust pervading the kingdom. \n\nIt remains to be seen if this new nation can hold itself together in the face of the coming storms..."
+plcommon.69.a:0 "We will stand united!"
 
 ### Parties ###
 PLC_totalist_party:0 "Free Worker's Party"
