--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -920,7 +920,7 @@ poland.133.t:0 "Poland Requests an Alliance"
 poland.133.d:0 "Even with our rejection of a new Commonwealth, Poland is seeking to define a special relationship between our two nations, proposing a defensive alliance between our two nations, where each will agree to defend the other in a time of war. It is a tempting proposal, but how shall we respond?"
 poland.133.a:0 "Of course!"
 poland.133.b:0 "We don't need them!"
-poland.134.t:0 "Reincorporating Lithuania"
+poland.134.t:0 "Protecting Lithuania"
 poland.134.d:0 "With the growing relationship between us and Lithuania, and the collapse of Lithuania's old alliance in Mitteleuropa, it is perhaps time to propose that Lithuania comes under our protection as a client state, so that we may better protect each other come a time of war."
 poland.134.a:0 "They are safer under our protection."
 poland.135.t:0 "Poland Seeks Our Submission"
