--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -28,9 +28,9 @@ PLC_polish_enthusiasm_idea_desc:0 ""
 PLC_secret_police_idea:0 "The Ministry of Public Security"
 PLC_secret_police_idea_desc:0 ""
 PLC_scattered_bureaucracy_idea:0 "Overwhelmed Bureaucracy"
-PLC_scattered_bureaucracy_idea_desc:0 "The bureaucracy of two distinct nations have siddenyl been given the overwhelming task of combining tow vastly different governmental systems into one cohesive whole. The new government is buckling under the pressure, and unitl integration is complete, the Commonwealth will be bureaucratically crippled."
+PLC_scattered_bureaucracy_idea_desc:0 "The bureaucracy of two distinct nations have suddenly been given the overwhelming task of combining tow vastly different governmental systems into one cohesive whole. The new government is buckling under the pressure, and unitl integration is complete, the Commonwealth will be bureaucratically crippled."
 PLC_scattered_bureaucracy_idea1:0 "Overwhelmed Bureaucracy"
-PLC_scattered_bureaucracy_idea1_desc:0 "The bureaucracy of two distinct nations have siddenyl been given the overwhelming task of combining tow vastly different governmental systems into one cohesive whole. The new government is buckling under the pressure, and unitl integration is complete, the Commonwealth will be bureaucratically crippled."
+PLC_scattered_bureaucracy_idea1_desc:0 "The bureaucracy of two distinct nations have suddenly been given the overwhelming task of combining tow vastly different governmental systems into one cohesive whole. The new government is buckling under the pressure, and unitl integration is complete, the Commonwealth will be bureaucratically crippled."
 PLC_universal_suffrage_idea:0 "Universal Suffrage"
 PLC_universal_suffrage_idea_desc:0 ""
 PLC_diplomatic_offices_idea:0 "International Diplomatic Offices"
@@ -146,7 +146,7 @@ PLC_trench_warfare:0 "Revisiting Trench Warfare"
 PLC_artillery_focus:0 "Bombardment Focus"
 PLC_moving_fortresses:0 "Mobile Fortresses"
 PLC_russian_forts:0 "Russian Border Forts"
-PLC_holding_our_gains:0 "Holding Our Gains"
+PLC_holding_our_gains:0 "Construct Urban Arsenals"
 PLC_mobilization:0 "Mobilisation"
 PLC_wartime_rations:0 "Economic Rationing"
 PLC_new_tactics:0 "New Army Tactics"
