--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -653,48 +653,50 @@ fengtian.new.59.b:0 "Army first!"
 fengtian.new.59.c:0 "A mixed approach is best"
 
 fengtian.new.60.t:0 "Mantetsu Chosabū"
-fengtian.new.60.d:0 "The South Manchuria Railway Company's Research Wing, colloquially known as Mantetsu Chosabū, has grown over the years from a mere corporate R&D department into the heart of Japan's colonial research programme, with divisions dedicated to everything from agricultural science to intelligence gathering. The sheer scale of Mantetsu Chosabū and its ambitions has lead to the opening of offices in Berlin, Vancouver, and New York, to attract foreign talent, and wide recruitment from Japan's foremost universities. The result is a surprisingly liberal and open minded intellectual community, which sometimes goes insofar as to place scientific inquiry before nationalistic concerns. \n\n This appears to be one of those instances, as our government has been approached by a Chosabū represenative offering future assistance in one of several technological fields in return for permission to test a new curative infusion on several divisions of our soldiers. Aware that this might cause concern among the men, the representative has already proposed that the infusion be sequentially administered by a certain Mr Suchong Yi, a rather circumspect but assuredly Chinese individual, instead of Mantetsu's own scientists. It should be noted that the Kwantung Army garrison in Dairen were strongly opposed to this arrangement."
+fengtian.new.60.d:0 "The South Manchuria Railway Company's Research Wing, colloquially known as Mantetsu Chosabū, has grown over the years from a mere corporate R&D department into the heart of Japan's colonial research programme, with divisions dedicated to everything from agricultural science to intelligence gathering. The sheer scale of Mantetsu Chosabū and its ambitions has lead to the opening of offices in Berlin, Vancouver, and New York, to attract foreign talent, and wide recruitment from Japan's foremost universities. The result is a surprisingly liberal and open minded intellectual community, which sometimes goes insofar as to place scientific inquiry before nationalistic concerns. \n\n This appears to be one of those instances, as our government has been approached by a Chosabū represenative offering future assistance in one of several technological fields, having convinced Kesago Nakajima, the leader of the Japanese Military Mission to Fengtian, that this move will improve our overall prosperity and readiness to defeat the Qing. It should be noted that the Kwantung Army garrison in Dairen were strongly opposed to this arrangement."
 fengtian.new.60.a:0 "Radar"
 fengtian.new.60.b:0 "Construction"
 fengtian.new.60.c:0 "Production Efficiency"
 fengtian.new.60.d:0 "Decryption"
 fengtian.new.60.e:0 "This is immoral!"
 
-fengtian.new.61.t:0 ""
-fengtian.new.61.d:0 ""
-fengtian.new.61.a:0 ""
+fengtian.new.61.t:0 "Mantetsu Chosabū Radar Collaboration"
+fengtian.new.61.d:0 "In light of Japan's recent technological developments in radar, scientists from Mantetsu's research wing have begun to collaborate with our own, so that we may sooner achieve the same level of advancement."
+fengtian.new.61.a:0 "Excellent"
 
-fengtian.new.62.t:0 ""
-fengtian.new.62.d:0 ""
-fengtian.new.62.a:0 ""
+fengtian.new.62.t:0 "Mantetsu Chosabū Radar Collaboration"
+fengtian.new.62.d:0 "In light of Japan's recent technological developments in radar, scientists from Mantetsu's research wing have begun to collaborate with our own, so that we may sooner achieve the same level of advancement."
+fengtian.new.62.a:0 "Excellent"
 
-fengtian.new.63.t:0 ""
-fengtian.new.63.d:0 ""
-fengtian.new.63.a:0 ""
+fengtian.new.63.t:0 "Mantetsu Chosabū Construction Collaboration"
+fengtian.new.63.d:0 "In light of Japan's recent developments, officials from Mantetsu's research wing have begun to collaborate with our own, providing new tools and best practices so that we may sooner achieve the same level of advancement."
+fengtian.new.63.a:0 "Excellent"
 
-fengtian.new.64.t:0 ""
-fengtian.new.64.d:0 ""
-fengtian.new.64.a:0 ""
+fengtian.new.64.t:0 "Mantetsu Chosabū Construction Collaboration"
+fengtian.new.64.d:0 "In light of Japan's recent developments, officials from Mantetsu's research wing have begun to collaborate with our own, providing new tools and best practices so that we may sooner achieve the same level of advancement."
+fengtian.new.64.a:0 "Excellent"
 
-fengtian.new.65.t:0 ""
-fengtian.new.65.d:0 ""
-fengtian.new.65.a:0 ""
+fengtian.new.65.t:0 "Mantetsu Chosabū Production Collaboration"
+fengtian.new.65.d:0 "In light of Japan's recent technological developments, scientists from Mantetsu's research wing have begun to collaborate with our own, providing new machines and manufacturing practices so that we may sooner achieve the same level of advancement."
+fengtian.new.65.a:0 "Excellent"
 
-fengtian.new.66.t:0 ""
-fengtian.new.66.d:0 ""
-fengtian.new.66.a:0 ""
+fengtian.new.66.t:0 "Mantetsu Chosabū Production Collaboration"
+fengtian.new.66.d:0 "In light of Japan's recent technological developments, scientists from Mantetsu's research wing have begun to collaborate with our own, providing new machines and manufacturing practices so that we may sooner achieve the same level of advancement."
+fengtian.new.66.a:0 "Excellent"
 
-fengtian.new.67.t:0 ""
-fengtian.new.67.d:0 ""
-fengtian.new.67.a:0 ""
+fengtian.new.67.t:0 "Mantetsu Chosabū Decryption Collaboration"
+fengtian.new.67.d:0 "In light of Japan's recent breakthroughs in decryption, scientists from Mantetsu's research wing have begun to collaborate with our own, providing new machines and methods so that we may sooner achieve the same level of advancement."
+fengtian.new.67.a:0 "Excellent"
 
-fengtian.new.68.t:0 ""
-fengtian.new.68.d:0 ""
-fengtian.new.68.a:0 ""
+fengtian.new.68.t:0 "Mantetsu Chosabū Decryption Collaboration"
+fengtian.new.68.d:0 "In light of Japan's recent breakthroughs in decryption, scientists from Mantetsu's research wing have begun to collaborate with our own, providing new machines and methods so that we may sooner achieve the same level of advancement."
+fengtian.new.68.a:0 "Excellent"
 
-fengtian.new.69.t:0 ""
-fengtian.new.69.d:0 ""
-fengtian.new.69.a:0 ""
+fengtian.new.69.t:0 "The Jinzhou Industrial Zone"
+fengtian.new.69.d:0 "INSERT"
+fengtian.new.69.a:0 "Choose Mantetsu"
+fengtian.new.69.b:0 "Choose the Communications Clique"
+fengtian.new.69.c:0 "Choose the Zhang Clique"
 
 fengtian.new.70.t:0 ""
 fengtian.new.70.d:0 ""
